--- a/views/index.erb
+++ b/views/index.erb
@@ -4,11 +4,24 @@
     <link href="/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1> Please type in your name: </h1>
 
-    <form action='/name'>
-      <input name='name' />
-      <submit/>
-    </form>
+    <% if @error %>
+      <div class='error'><%= @error %></div>
+    <% end %>
+
+    <div class='box'>
+      
+      <div class='title'>Login</div>
+      <form action='/login' method=post> 
+        <input name='username' placeholder='username' />
+        <input name='password' type='password' placeholder='password' />
+        <br />
+        <br />
+
+        <input type='submit' />
+      </form>
+
+    </div> 
+    
   </body>
 </html>
