--- a/views/old_index.erb
+++ b/views/old_index.erb
@@ -4,12 +4,13 @@
     <link href="/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <h1> Please type in your name: </h1>
 
-    <div class='box'>
-      Hello <%= @name %> you are in <%= @state %>
-      <a href='/'>Home</a>    
-    </div>
-
-    
+    <form action='/name'>
+      <input name='name' />
+      <submit/>
+    </form>
   </body>
 </html>
+<body>
+
