--- a/views/old_name.erb
+++ b/views/old_name.erb
@@ -5,11 +5,11 @@
   </head>
   <body>
 
-    <div class='box'>
-      Hello <%= @name %> you are in <%= @state %>
-      <a href='/'>Home</a>    
+    <div class='bordered'> 
+      Hello <%= @name %> 
     </div>
 
-    
+    <a href='/'>Home</a>
+
   </body>
 </html>
